feature(homepage): #1 Add UI for Homepage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">MyWeatherApplication</string>
+    <string name="app_name">MyWeather by VISEO</string>
+    <string name="app_title">myWeather Application</string>
+    <string name="homepage_city_hint">Search a city</string>
 </resources>
