--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">MyWeather by VISEO</string>
     <string name="app_title">myWeather Application</string>
     <string name="homepage_city_hint">Search a city</string>
-    <string name="city_weather_humidity">Humidity:\n$s</string>
+    <string name="city_weather_humidity">Humidity:\n%s</string>
+    <string name="city_weather_temperature">%s°C</string>
 </resources>
